# vyper-doc-cn

./: .gitignore  .readthedocs.yaml  README.md  TERMS.csv  pyproject.toml
.github/workflows/: sync_docs.yml
docs/: conf.py  release-notes.rst  structure-of-a-contract.rst
docs/locale/zh_CN/LC_MESSAGES/: built-in-functions.po  compiler-exceptions.po  constants-and-vars.mo  constants-and-vars.po  contributing.po  deploying-contracts.po  event-logging.po  index.po  interfaces.po  statements.po  structure-of-a-contract.po  style-guide.po  testing-contracts-brownie.po  testing-contracts.po  toctree.po  types.po  versioning.po  vyper-by-example.po
locales/zh_CN/LC_MESSAGES/: compiling-a-contract.po  control-structures.po  installing-vyper.po  natspec.po  release-notes.po  resources.po  scoping-and-declarations.po  sphinx.po  testing-contracts-titanoboa.po  using-modules.po
scripts/: check_docs.py
